src/test/deca/syntax/valid/improvided/test_include.deca
// Description:
// 	test d'inclusion d'un fichier existant
// Resultats:
// 	ok

#include "included1.deca"
{
	int x;

}
