src/test/deca/syntax/invalid/improvided/circular_include.deca
// Description :
// 	Inclusion du fichier lui meme
// Resultats :
// 	Ligne 5
#include "circular_include.deca"
{
	print("Boucle");
}
